--- a/src/components/CentralComponent/CentralComponent.scss
+++ b/src/components/CentralComponent/CentralComponent.scss
@@ -4,6 +4,11 @@ div.central_component {
     flex-direction: column;
     align-items: center;
 
+    animation-name: floating;
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+
     div.central_text > h1{
         margin-top: 3rem;
         font-family: "IBM Plex Mono", monospace;
@@ -23,4 +28,10 @@ div.central_component {
             font-size: 2rem;
         }
     }
+}
+
+@keyframes floating {
+    0% { transform: translate(0,  0px); }
+    50%  { transform: translate(0, 15px); }
+    100%   { transform: translate(0, -0px); }
 }
